--- a/Lessons/03_DataExploration_Part2.Rmd
+++ b/Lessons/03_DataExploration_Part2.Rmd
@@ -15,9 +15,12 @@ getwd()
 
 # 2. Load packages
 library(tidyverse)
+library(here)
+
+here()
 
 # 3. Import datasets
-USGS.flow.data <- read.csv("./Data/Processed/USGS_Site02085000_Flow_Processed.csv",stringsAsFactors = T)
+USGS.flow.data <- read.csv("/Users/ashtoncloer/EDE_Fall2023/Data/Raw/USGS_Site02085000_Flow_Raw.csv",stringsAsFactors = T)
 
 #View(USGS.flow.data)
 # Alternate option: click on data frame in Environment tab
