--- a/Lessons/05Lab_DataVisualization.Rmd
+++ b/Lessons/05Lab_DataVisualization.Rmd
@@ -93,17 +93,27 @@ Say we want to plot the number of records each month in the Peter/Paul lakes dat
 
 ```{r Plot the number of records by month}
 #What kind of values are months?
+class(PeterPaul.chem.nutrients$month)
 
 #List unique values
-
+unique(PeterPaul.chem.nutrients$month)
 #Plot how many Lake observations occur each month
-
+ggplot(PeterPaul.chem.nutrients, aes(x = month)) +
+  geom_bar()
 #Convert month to a factor -- with 12 levels, labelled with month names
-
+factor(PeterPaul.chem.nutrients$month, levels=1:12, labels=month.abb)
 #Try again: Plot how many Lake observations occur each month
-
+ggplot(PeterPaul.chem.nutrients, aes(x = factor(month, levels=1:12, labels=month.abb))) +
+  geom_bar()
 #Alter to include missing months
-
+ggplot(
+  PeterPaul.chem.nutrients,
+  aes(
+    x = factor(
+      month, levels=1:12, labels=month.abb))) +
+  geom_bar() +
+  scale_x_discrete(
+    name="month", drop=FALSE) 
 #Tidy up the code
 
 ```
@@ -228,7 +238,19 @@ Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 # Plot surface temperatures by day of  year. 
 # Color your points by year, and facet by lake in two rows.
 # Change the ylab name
+temp_by_day <-
+  ggplot(filter(
+    PeterPaul.chem.nutrients, 
+                depth==0), 
+         aes(x=daynum, 
+             y=temperature_C, 
+             color=year4)) +
+  geom_point() +
+  xlim(125, 325) +
+  facet_wrap(vars(lakename),nrow=2) +
+  ylab("Surface Temperature")
 
+temp_by_day
 
 #2. 
 # Plot temperature by date. Color your points by depth.
@@ -236,8 +258,13 @@ Exercise: build your own scatterplots of PeterPaul.chem.nutrients
 # Change the color palette to magma and play with direction (+- 1), which one makes more sense?
 # Change x axis to include marker/labels every 5 years
 
+temp_by_day2 <-
+  ggplot(PeterPaul.chem.nutrients, aes(x=sampledate, y=temperature_C, color=depth)) +
+  geom_point(size=0.5) +
+  scale_color_viridis(option="magma", direction = -1) +
+  scale_x_date(date_breaks = "5 years",date_labels = "%Y")
 
-
+temp_by_day2
 ```
 ## Plotting the relationship between two continuous variables: Scatterplot
 
