--- a/Lessons/05Lab_DataVisualization.Rmd
+++ b/Lessons/05Lab_DataVisualization.Rmd
@@ -277,7 +277,9 @@ Exercise: Plot relationships between air quality measurements
 # Make the points 50 % transparent
 # Add a line of best fit for the linear regression of these variables.
 
-
+ggplot(EPAair, aes(x=PM2.5, y=Ozone, color=mean_Lat)) +
+  geom_point(alpha=0.5) +
+  geom_smooth(method="lm")
 
 
 ```
