--- a/Assignments/AshtonCloer_A05_DataVisualization.Rmd
+++ b/Assignments/AshtonCloer_A05_DataVisualization.Rmd
@@ -31,22 +31,31 @@ This exercise accompanies the lessons in Environmental Data Analytics on Data Vi
 2. Make sure R is reading dates as date format; if not change the format to date.
 
 ```{r initialize project}
-#1 
+#1 setting up session and reading in data files
 library(tidyverse)
 library(here)
 library(cowplot)
+library(ggthemes)
 getwd()
 here()
 
 PeterPaul.chem.nutrients <- 
-  read.csv(here("Data/Processed_KEY/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv"), stringsAsFactors = TRUE)
+  read.csv(
+    here(
+    "Data/Processed_KEY/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv"),
+    stringsAsFactors = TRUE)
 
 NiwotRidge.litter <-
-  read.csv(here("Data/Processed_KEY/NEON_NIWO_Litter_mass_trap_Processed.csv"), stringsAsFactors = TRUE)
+  read.csv(
+    here(
+    "Data/Processed_KEY/NEON_NIWO_Litter_mass_trap_Processed.csv"), 
+    stringsAsFactors = TRUE)
 
-#2 
-PeterPaul.chem.nutrients$sampledate <- ymd(PeterPaul.chem.nutrients$sampledate)
-NiwotRidge.litter$collectDate <- ymd(NiwotRidge.litter$collectDate)
+#2 changing to date format
+PeterPaul.chem.nutrients$sampledate <- ymd(
+  PeterPaul.chem.nutrients$sampledate)
+NiwotRidge.litter$collectDate <- ymd(
+  NiwotRidge.litter$collectDate)
 
 class(PeterPaul.chem.nutrients$sampledate)
 class(NiwotRidge.litter$collectDate)
@@ -60,9 +69,16 @@ class(NiwotRidge.litter$collectDate)
  * Legend
 
 ```{r build plot theme}
-#3
-mytheme1 <- theme_bw(base_size = 14) +
-  theme(axis.text = element_text(color = "black"), 
+#3 building plot theme by changing the axis text color,
+#the background, base text size 
+#and font type and the legend position
+
+mytheme1 <- theme_economist(
+  base_size = 14, 
+  base_family = "Times") +
+  theme(
+    axis.text = element_text(
+      color = "gray"), 
         legend.position = "bottom")
 ```
 
@@ -74,13 +90,22 @@ For numbers 4-7, create ggplot graphs and adjust aesthetics to follow best pract
 ```{r plot total P vs PO4}
 #4 
 PhosphorusVsPhosphate <- 
-  ggplot(PeterPaul.chem.nutrients, aes(x = po4, y = tp_ug, color = lakename)) +
+  ggplot(PeterPaul.chem.nutrients, 
+         aes(x = po4, y = tp_ug, #plotting total phosphorus by phosphate
+             color = lakename)) + #setting color of points by lakename
   geom_point() +
   xlim(0, 40) +
-  geom_smooth(method = "lm", color="black") +
-  ggtitle("How Phosphorus Varies by Phosphate Levels") +
-  labs(x = "Phosphate", y = "Phosphorus (ug/l)") +
-  mytheme1
+  scale_color_manual(
+    values = c(
+      "#E7B800", "#FC4E07")) + #changing colors of points
+  geom_smooth(method = "lm", #adding line of best fit
+              color="black") + #coloring line of best fit black
+  ggtitle(
+    "How Phosphorus Varies by Phosphate Levels") + #adding title
+  labs(
+    x = "Phosphate", #adding labels to xaxis
+    y = "Phosphorus (ug/l)") + #adding labels to yaxis
+  mytheme1 #adding my set theme
 print(PhosphorusVsPhosphate)
 ```
 
@@ -93,30 +118,81 @@ Tip:
 
 ```{r Create boxplots}
 #5 
+factor(
+  PeterPaul.chem.nutrients$month, 
+  levels=1:12, 
+  labels=month.abb) #converting month to factor
+
 temp <-
-  ggplot(PeterPaul.chem.nutrients, aes(x = month, y = temperature_C)) +
-  geom_boxplot(aes(color = lakename)) +
+  ggplot(PeterPaul.chem.nutrients, 
+         aes(x = factor(
+  PeterPaul.chem.nutrients$month, 
+  levels=1:12, 
+  labels=month.abb), y = temperature_C)) +
+  geom_boxplot(
+    aes(color = lakename)) +
+   #scale_x_discrete(
+    #name="month", drop=FALSE) +
+  scale_color_manual(
+    values = c(
+      "#E7B800", "#FC4E07")) +
+  labs(x = "Month", 
+       y = "Temperature (C)") +
   mytheme1
 print(temp)
 
 TP <-
-  ggplot(PeterPaul.chem.nutrients, aes(x = month, y = tp_ug)) +
+  ggplot(PeterPaul.chem.nutrients, aes(
+    x = factor(
+  PeterPaul.chem.nutrients$month, 
+  levels=1:12, 
+  labels=month.abb), y = tp_ug)) +
   geom_boxplot(aes(color = lakename)) +
+   #scale_x_discrete(
+    #name="month", drop=FALSE) +    
+  scale_color_manual(
+    values = c(
+      "#E7B800", "#FC4E07")) +
+  labs(x = "Month", 
+       y = "Total Phosphorus (ug/L)") +
+  ylim(0, 100) +
   mytheme1
 print(TP)
 
 TN <-
-  ggplot(PeterPaul.chem.nutrients, aes(x = month, y = tn_ug)) +
+  ggplot(PeterPaul.chem.nutrients, aes(
+    x = factor(
+  PeterPaul.chem.nutrients$month, 
+  levels=1:12, 
+  labels=month.abb), y = tn_ug)) +
   geom_boxplot(aes(color = lakename)) +
+  #scale_x_discrete(
+    #name="month", drop=FALSE) +
+  scale_color_manual(
+    values = c(
+      "#E7B800", "#FC4E07")) +
+  labs(x = "Month", 
+       y = "Total Nitrogen (ug/L)") +
+  ylim(0, 2000) +
   mytheme1
 print(TN)
 
-plot_grid(temp, TP, TN)
+combined_plot <- plot_grid(
+  TN + theme(legend.position = "none"), 
+  TP + theme(legend.position = "none"), 
+  temp, 
+  align = "vh", 
+  nrow = 3,  rel_heights=c(1, 1, 1.25)
+)
+
+
+print(
+  combined_plot)
 ```
 
 Question: What do you observe about the variables of interest over seasons and between lakes? 
 
-> Answer: 
+> Answer: The temperature at Peter and Paul lakes both seem to follow the same general pattern, increasing in May and June to a maximum temperature in July and August, followed by a decrease in temperature through November. For total phosphorus, Peter lake seems to generally increase from May to a maximum in September. However, Paul lake seems to be highest in September and then generally decreases until it reaches a minimum value in july and August. For total nitrogen, Peter lake seems to increase starting in May until reaching a maximum in August and then a minimum in September. Paul lake is generally highest in May and then reaches a minimum in August and begins increasing again in September. 
 
 6. [Niwot Ridge] Plot a subset of the litter dataset by displaying only the "Needles" functional group. Plot the dry mass of needle litter by date and separate by NLCD class with a color aesthetic. (no need to adjust the name of each land use)
 
@@ -125,21 +201,51 @@ Question: What do you observe about the variables of interest over seasons and b
 ```{r Plot litter}
 #6
 needles_litter <-
-  ggplot(subset(NiwotRidge.litter, functionalGroup == "Needles"), aes(x = collectDate, y = dryMass, color = nlcdClass)) +
+  ggplot(subset(NiwotRidge.litter, 
+                functionalGroup == "Needles"), 
+         aes(x = collectDate, 
+             y = dryMass, 
+             color = nlcdClass)) +
   geom_point() +
+  scale_color_manual(
+    values = c(
+      "#006400", 
+      "#7CFC00", 
+      "#6B8E23")) +
+  labs(x = "Date", 
+       y = "Dry Mass") +
+   scale_x_date(
+     date_breaks = "6 months",
+     date_labels = "%m/%Y") +
+  ylim(0, 40)  +
   mytheme1
   
 print(needles_litter)
 
 #7
 needles_litter2 <-
-  ggplot(subset(NiwotRidge.litter, functionalGroup == "Needles"), aes(x = collectDate, y = dryMass, color = nlcdClass)) +
+  ggplot(subset(
+    NiwotRidge.litter, 
+    functionalGroup == "Needles"), 
+    aes(x = collectDate, 
+        y = dryMass, 
+        color = nlcdClass)) +
   geom_point() +
-  facet_grid(nlcdClass ~ functionalGroup) +
+  facet_grid(vars(nlcdClass)) +
+  scale_color_manual(
+    values = c(
+      "#006400", 
+      "#7CFC00", 
+      "#6B8E23")) +
+  labs(x = "Date", 
+       y = "Dry Mass") +
+   scale_x_date(
+     date_breaks = "6 months",
+     date_labels = "%m/%Y") +
   mytheme1
 
 print(needles_litter2)
 ```
 Question: Which of these plots (6 vs. 7) do you think is more effective, and why? 
 
-> Answer:
+> Answer: Plot 6 is more effective for directly comparing the drymass of the various classes, since each class is plotted on the same graph. For example, in October of 2016, you can directly compare the drymass values to see that Evergreen forest had the highest drymass occurence in that month and grasslands had the smallest. However, plot 7 is more effective for identifying trends in the individual classes. For example, plot 7 makes it easier to see that the drymass of the grassland class peaked in 2016, followed by a decrease in 2017 and another peak in 2018. 
