--- a/Lessons/07Lab_GLMs.Rmd
+++ b/Lessons/07Lab_GLMs.Rmd
@@ -49,7 +49,31 @@ Create three plots, each with appropriately formatted axes and legends. Choose a
 ```{r}
 #Exercise 1:
 
+ozone_density<-
+  ggplot(EPAair, aes(x = EPAair$Ozone, fill = as.factor(Year))) +
+  geom_density(alpha = 0.5) +
+  scale_fill_manual(values = c("darkgreen", "darkblue")) +
+  labs(x = "Ozone AQI value", y= "Density", fill = "")
 
+print(ozone_density)
+
+ozone_boxplot<-
+  ggplot(EPAair, aes(x = as.factor(Year), y = Ozone)) +
+  geom_boxplot() +
+  stat_summary(geom = "text", fun = max, vjust = -1, size = 4, label = c("b", "a")) +
+  labs(x = "", y= "Ozone AQI Value") +
+  ylim(0, 150)
+
+print(ozone_boxplot)
+
+ozone_violin<-
+  ggplot(EPAair, aes(x = as.factor(Year), y = Ozone)) +
+  geom_violin() +
+   stat_summary(geom = "text", fun = max, vjust = -1, size = 4, label = c("b", "a")) +
+  labs(x = "", y= "Ozone AQI Value") +
+  ylim(0, 150)
+
+print(ozone_violin)
 ```
 
 ## Linear Regression
@@ -62,12 +86,19 @@ For the NTL-LTER dataset, can we predict PM2.5 from Ozone?
 
 #Exercise 2: Run a linear regression PM2.5 by Ozone. Find the p-value and R-squared value. 
 
+lm_Ozone<-lm(data = EPAair, Ozone ~ PM2.5)
+
+summary(lm_Ozone) #pvalue = <2.2e-16, R2 = 0.1316
 
 
 #Exercise 3: Build a scatterplot. Add a line and standard error for the linear regression. Add the regression equation to the plot
 
+ozone_scatter<-
+  ggplot(EPAair, aes(x = Ozone, y = PM2.5)) +
+  geom_point() +
+  geom_smooth(method = "lm", col="blue") 
 
-
+print(ozone_scatter)
 ```
 
 
@@ -79,7 +110,12 @@ What other variables can we add to improve model?
 
 #Exercise 4: Build correlation plots and identify more possible explanatory variables to add to the regression.
 
-
+library(corrplot)
+library(dplyr)
+EPAair.subset<-
+  EPAair %>%
+  select(mean_Lat:Ozone) %>%
+  na.omit()
 
 
 #Exercise 5: Choose a model by AIC in a Stepwise Algorithm. Do the results from AIC match the variables you selected on Exercise 4?
