--- a/Assignments/AshtonCloer_A07_GLMs.Rmd
+++ b/Assignments/AshtonCloer_A07_GLMs.Rmd
@@ -38,13 +38,15 @@ here()
 NTL_LTER_Lake_ChemistryPhysics <- 
   read.csv(
     here(
-    "Data/Raw/NTL_LTER_Lake_ChemistryPhysics_Raw.csv"),
+    "EDE_Fall2023/Data/Raw/NTL_LTER_Lake_ChemistryPhysics_Raw.csv"),
     stringsAsFactors = TRUE)
 
-NTL_LTER_Lake_ChemistryPhysics$sampledate <- mdy(
+NTL_LTER_Lake_ChemistryPhysics$sampledate <- 
+  mdy(
   NTL_LTER_Lake_ChemistryPhysics$sampledate)
 
-class(NTL_LTER_Lake_ChemistryPhysics$sampledate)
+class(
+  NTL_LTER_Lake_ChemistryPhysics$sampledate)
 
 #2
 mytheme1 <- theme_gray(
@@ -75,22 +77,30 @@ Ha: Mean lake temperature in July does change with depth across all lakes
 
 ```{r scatterplot}
 #4
-NTL_LTER_Lake_ChemistryPhysics <- NTL_LTER_Lake_ChemistryPhysics %>% #ask how to do this within the pipe function
-  mutate_at(vars(sampledate), funs(year, month, day))
 
-NTL_LTER_wrangled <- NTL_LTER_Lake_ChemistryPhysics %>%
+NTL_LTER_wrangled <- 
+  NTL_LTER_Lake_ChemistryPhysics %>%
+  mutate_at(vars(sampledate), 
+            funs(year, 
+                 month, day)) %>%
   filter(month == '7') %>%
-  select('lakename', 'year4', 'daynum', 'depth', 'temperature_C') %>%
+  select('lakename', 'year4', 
+         'daynum', 'depth', 
+         'temperature_C') %>%
   na.omit()
   
 #5
 temp_by_depth <- 
-  ggplot(NTL_LTER_wrangled, aes(x = depth, y = temperature_C)) +
+  ggplot(NTL_LTER_wrangled, 
+         aes(x = depth, y = temperature_C)) +
   geom_point() +
-  geom_smooth(method = 'lm', col="blue") + #should I add the equation for the line to the graph?
+  geom_smooth(
+    method = 'lm', col="blue") + 
   ylim(0,35) +
-  labs(x = "Depth", y = "Temperature (C)") +
-  ggtitle("How Temperature Varies by Depth in July") +
+  labs(x = "Depth", 
+       y = "Temperature (C)") +
+  ggtitle(
+    "How Temperature Varies by Depth in July") +
   mytheme1
 print(temp_by_depth)
 ```
@@ -106,8 +116,10 @@ print(temp_by_depth)
 ```{r linear.regression}
 #7
 lm_temp_by_depth <-
-  lm(data = NTL_LTER_wrangled, temperature_C ~ depth)
-summary(lm_temp_by_depth) #do I need to do a correlation test here as well?
+  lm(
+    data = NTL_LTER_wrangled, 
+    temperature_C ~ depth)
+summary(lm_temp_by_depth) 
 ```
 
 
@@ -115,7 +127,6 @@ summary(lm_temp_by_depth) #do I need to do a correlation test here as well?
 
 > Answer: The model suggests that depth and temperature have a negative relationship, where temperature decreases as depth increases. Changes in depth was found to explain 73.87% of the variability in temperature, degrees of freedom were calculated to 9726 and the p-value was 2.2e-16 or less than 0. For each 1m change in depth, temperature was found to change by 1.94 degrees.  
 
-how is the answer above? is there anything I should add?
 ---
 
 ## Multiple regression
@@ -128,17 +139,20 @@ Let's tackle a similar question from a different approach. Here, we want to expl
 
 ```{r temperature.model}
 #9
-tempAIC <- lm(data = NTL_LTER_wrangled, temperature_C ~ depth + year4 + daynum)
+tempAIC <- lm(
+  data = NTL_LTER_wrangled, 
+  temperature_C ~ depth + year4 + daynum)
 step(tempAIC)
 
 #10
-temp_model <- lm(data = NTL_LTER_wrangled, ) # I am confused here because my AIC Step function does not look the same and suggests that the best model is with depth removed
-
+temp_model <- lm(
+  data = NTL_LTER_wrangled, temperature_C ~ depth + year4 + daynum) 
+summary(temp_model)
 ```
 
 11. What is the final set of explanatory variables that the AIC method suggests we use to predict temperature in our multiple regression? How much of the observed variance does this model explain? Is this an improvement over the model using only depth as the explanatory variable?
 
-> Answer: 
+> Answer: The final set of explanatory variables to predict temperatures is depth, year4, and daynum. This model explains 74.12% of the observed variance in temperature. This is an improvement over the model using just depth which only explains 73.87% of the observed variance in temperature. 
 
 
 
@@ -149,17 +163,21 @@ temp_model <- lm(data = NTL_LTER_wrangled, ) # I am confused here because my AIC
 
 ```{r anova.model}
 #12
-anova_temp_by_Depth <- aov(data = NTL_LTER_wrangled, temperature_C ~ lakename)
+anova_temp_by_Depth <- aov(
+  data = NTL_LTER_wrangled, 
+  temperature_C ~ lakename)
 summary(anova_temp_by_Depth)
 
-anova2_temp_by_Depth <- lm(data = NTL_LTER_wrangled, temperature_C ~ lakename)
+anova2_temp_by_Depth <- lm(
+  data = NTL_LTER_wrangled, 
+  temperature_C ~ lakename)
 summary(anova2_temp_by_Depth)
 ```
 
 13. Is there a significant difference in mean temperature among the lakes? Report your findings. 
 
 > Answer: Based on the anova test (p value < 0 or 2e-16), we can reject the null hypothesis and suggest that there is a difference in mean temperatures amongst the lake locations in the month of July. 
-what else should I include in this write-up
+
 
 
 14. Create a graph that depicts temperature by depth, with a separate color for each lake. Add a geom_smooth (method = "lm", se = FALSE) for each lake. Make your points 50 % transparent. Adjust your y axis limits to go from 0 to 35 degrees. Clean up your graph to make it pretty. 
@@ -167,12 +185,20 @@ what else should I include in this write-up
 ```{r scatterplot.2}
 #14.
 temp_by_depth_bylake <- 
-  ggplot(NTL_LTER_wrangled, aes(x = depth, y = temperature_C, color = lakename)) +
-  geom_point(alpha = 0.5) + #is this how to change transparency?
-  geom_smooth(method = 'lm', col="blue") + #should I add the equation for the line to the graph?
+  ggplot(
+    NTL_LTER_wrangled, 
+    aes(x = depth, 
+        y = temperature_C, 
+        color = lakename)) +
+  geom_point(alpha = 0.5) + 
+  geom_smooth(
+    method = 'lm', 
+    col="blue") + 
   ylim(0,35) +
-  labs(x = "Depth", y = "Temperature (C)") +
-  ggtitle("How Temperature Varies by Depth in July at Various Locations") +
+  labs(x = "Depth", 
+       y = "Temperature (C)") +
+  ggtitle(
+    "How Temperature Varies by Depth in July at Various Locations") +
   mytheme1
 print(temp_by_depth_bylake)
 
@@ -182,28 +208,46 @@ print(temp_by_depth_bylake)
 
 ```{r tukey.test}
 #15
-TukeyHSD(anova_temp_by_Depth)
-HSD_test<- HSD.test(anova_temp_by_Depth, "lakename", group = TRUE)
-summary(HSD_test)
+Tukey.HSD<- TukeyHSD(anova_temp_by_Depth)
+HSD_test<- HSD.test(
+  anova_temp_by_Depth, 
+  "lakename", 
+  group = TRUE)
+print(HSD_test)
+print(Tukey.HSD)
 ```
 
 16.From the findings above, which lakes have the same mean temperature, statistically speaking, as Peter Lake? Does any lake have a mean temperature that is statistically distinct from all the other lakes?
 
->Answer: not sure how to answer this
+>Answer: Ward Lake (p value = 0.782) seems to have the same mean temperature as Peter Lake, statistically speaking, given the difference in means of 1.142 is supported by a p-value that is unsignficant. Central Long lake, Tuesday Lake, and East Long lake seem to have means that are statiscally distinct from all other lakes. 
 
  
 
 17. If we were just looking at Peter Lake and Paul Lake. What's another test we might explore to see whether they have distinct mean temperatures? 
 
->Answer: HSD.test
+>Answer: HSD.test and or a two sample t-test
 
 
 
 18. Wrangle the July data to include only records for Crampton Lake and Ward Lake. Run the two-sample T-test on these data to determine whether their July temperature are same or different. What does the test say? Are the mean temperatures for the lakes equal? Does that match you answer for part 16?
 
 ```{r t.test}
-NTL_LTER_wrangled2 <- NTL_LTER_wrangled %>%
-  filter(lakename == "Crampton Lake" & lakename == "Ward Lake")
+NTL_LTER_wrangled2 <- 
+  NTL_LTER_wrangled %>%
+  filter(
+    lakename %in% c(
+      "Crampton Lake",
+      "Ward Lake"))
+
+lake.twosample <- t.test(
+  NTL_LTER_wrangled2$temperature_C ~ 
+    NTL_LTER_wrangled2$lakename)
+lake.twosample
+
+lake.twosample2 <- lm(
+  NTL_LTER_wrangled2$temperature_C ~ 
+    NTL_LTER_wrangled2$lakename)
+summary(lake.twosample2)
 ```
 
->Answer: 
+>Answer: According to the two sample t-test, the mean temperatures for Crampton and Ward Lake are not statiscally different (p = 0.2649). Therefore, based on the ananlysis, we cannot reject the null hypothesis which states that the true difference in means between group Crampton Lake and Ward Lake is equal to zero. This matches my answer to question 16. 
